Add software download section to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html lang="zh-Hant">
+<head>
+  <meta charset="UTF-8">
+  <title>軟體下載站</title>
+  <style>
+    body {
+      font-family: Arial, "Microsoft JhengHei", sans-serif;
+      background-color: #f5f5f5;
+      padding: 20px;
+    }
+    h1 {
+      color: #333;
+    }
+    .software {
+      background: #ffffff;
+      padding: 15px;
+      margin-bottom: 15px;
+      border-radius: 8px;
+    }
+    .software h2 {
+      margin-top: 0;
+    }
+    .download {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 8px 12px;
+      background-color: #007bff;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+    }
+    .download:hover {
+      background-color: #0056b3;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>📦 我的軟體下載區</h1>
+  <p>這裡提供我製作的軟體，歡迎下載使用。</p>
+
+  <div class="software">
+    <h2>🔹 軟體名稱一</h2>
+    <p>這是一個用來做 XXX 的工具，操作簡單、速度快。</p>
+    <a class="download" href="下載連結放這裡">⬇ 下載</a>
+  </div>
+
+  <div class="software">
+    <h2>🔹 軟體名稱二</h2>
+    <p>這個軟體可以幫助你完成 XXX 功能。</p>
+    <a class="download" href="下載連結放這裡">⬇ 下載</a>
+  </div>
+
+  <div class="software">
+    <h2>🔹 軟體名稱三</h2>
+    <p>適合用在 XXX 的情境，免費使用。</p>
+    <a class="download" href="下載連結放這裡">⬇ 下載</a>
+  </div>
+
+</body>
+</html>
 
