--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>軟體下載站</title>
+  <title>benny軟體下載站</title>
   <style>
     /* 全局設定 */
     body {
@@ -99,7 +99,7 @@
 </head>
 <body>
   <header>
-    <h1>📦 我的軟體下載站</h1>
+    <h1>📦 Benny撰寫的軟體下載站</h1>
     <p>提供各類實用軟體，免費下載使用</p>
   </header>
 
@@ -107,8 +107,8 @@
     <div class="software">
       <img src="software1.png" alt="軟體名稱一">
       <div>
-        <h2>🔹 我的手機遊戲</h2>
-        <p>這是一個安著手機象棋遊戲</p>
+        <h2>🔹 象棋遊戲</h2>
+        <p>中國象棋不僅考驗邏輯和計算能力，還能提升戰略思維和耐心。對新手來說，先熟悉棋子走法和簡單開局就能開始對弈。</p>
         <a class="download" href="https://github.com/acasiacomm/mygame/releases/download/v1.0.0/app-release.apk" download>⬇ 下載</a>
       </div>
     </div>
