--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
       object-fit: cover;
       border-radius: 10px;
       margin-bottom: 10px;
+      /* 移除原本的 PNG 來源，改為空白或預設圖片 */
+      background-color: #ccc;
     }
 
     .software h2 {
@@ -95,6 +97,16 @@
         flex: 1;
       }
     }
+
+    footer {
+      text-align: center;
+      padding: 15px 0;
+      background-color: #f0f2f5;
+      color: #777;
+      font-size: 0.9em;
+      border-top: 1px solid #ddd;
+      margin-top: 30px;
+    }
   </style>
 </head>
 <body>
@@ -105,7 +117,7 @@
 
   <main>
     <div class="software">
-      <img src="software1.png" alt="軟體名稱一">
+      <img alt="Android遊戲">
       <div>
         <h2>🔹 象棋遊戲</h2>
         <p>中國象棋不僅考驗邏輯和計算能力，還能提升戰略思維和耐心。對新手來說，先熟悉棋子走法和簡單開局就能開始對弈。</p>
@@ -114,7 +126,7 @@
     </div>
 
     <div class="software">
-      <img src="software2.png" alt="軟體名稱二">
+      <img alt="軟體名稱二">
       <div>
         <h2>🔹 軟體名稱二</h2>
         <p>軟體開發中</p>
@@ -123,7 +135,7 @@
     </div>
 
     <div class="software">
-      <img src="software3.png" alt="軟體名稱三">
+      <img alt="軟體名稱三">
       <div>
         <h2>🔹 軟體名稱三</h2>
         <p>軟體開發中</p>
@@ -131,5 +143,9 @@
       </div>
     </div>
   </main>
+
+  <footer>
+    © 2026 Benny 版權所有
+  </footer>
 </body>
 </html>
