Change title to 'Android象棋遊戲' and add compatibility note
Updated the title and added a note about Android compatibility.

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
   <main>
     <div class="software">
       <div>
-        <h2>🔹 象棋遊戲</h2>
-        <p>中國象棋不僅考驗邏輯和計算能力，還能提升戰略思維和耐心。對新手來說，先熟悉棋子走法和簡單開局就能開始對弈。</p>
+        <h2>🔹 Android象棋遊戲</h2>
+        <p>中國象棋不僅考驗邏輯和計算能力，還能提升戰略思維和耐心。對新手來說，先熟悉棋子走法和簡單開局就能開始對弈。遊戲只適用於Android手機安裝</p>
         <a class="download" href="https://github.com/acasiacomm/mygame/releases/download/v1.0.0/app-release.apk" download>⬇ 下載</a>
       </div>
     </div>
