Update software name in index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <div class="software">
       <div>
-        <h2>🔹 Android Benny羽球輪替系統</h2>
+        <h2>🔹 軟體名稱二</h2>
         <p>軟體開發中</p>
         <a class="download" href="software2.zip" download>⬇ 下載</a>
       </div>
