--- a/index.html
+++ b/index.html
@@ -103,16 +103,16 @@
   <main>
     <div class="software">
       <div>
-        <h2>🔹 Android Benny羽球輪替系統</h2>
-        <p>通用的羽球輪替系統只適用於Android手機安裝</p>
+        <h2>🔹 Android Benny象棋</h2>
+        <p>Android手機安裝， 象棋棋盤如沙場，對弈雙方需要在有限的空間內，透過深思熟慮的佈局和精密的計算，運用各種戰術來擊敗對手。這反映了古代軍事思想中「不戰而屈人之兵」或「知己知彼」的智慧</p>
         <a class="download" href="https://github.com/acasiacomm/mygame/releases/download/v1.0.0/app-release.apk" download>⬇ 下載</a>
       </div>
     </div>
 
     <div class="software">
       <div>
-        <h2>🔹 軟體名稱二</h2>
-        <p>軟體開發中</p>
+        <h2>🔹 Android Benny羽球輪替系統</h2>
+        <p>通用的羽球輪替系統只適用於Android手機安裝</p>
         <a class="download" href="software2.zip" download>⬇ 下載</a>
       </div>
     </div>
