--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div>
         <h2>🔹 Android Benny羽球輪替系統</h2>
         <p>通用的羽球輪替系統只適用於Android手機安裝</p>
-        <a class="download" href="software2.zip" download>⬇ 下載</a>
+        <a class="download" href="https://github.com/acasiacomm/Bennys-badminton-racket-is-in-place/raw/refs/heads/main/22222.apk" download>⬇ 下載</a>
       </div>
     </div>
 
