--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
 
     <div class="software">
       <div>
-        <h2>🔹 軟體名稱三</h2>
-        <p>軟體開發中</p>
-        <a class="download" href="software3.zip" download>⬇ 下載</a>
+        <h2>🔹 Benny基礎電力系統</h2>
+        <p>基礎電力指的是電力系統運作的四大基本物理量：電壓 (V) 、電流 (A) 、電阻 (Ω) 和功率 (W)，以及電力如何傳輸（如交流/直流）、儲存與使用，核心概念包括電路的閉合迴路、電量（庫侖 C）與能量（焦耳 J/度 kWh）單位。電力學則深入探討大電流、高功率電路在發電、輸電、配電及電能轉換等工程應用。 </p>
+        <a class="download" href="https://github.com/acasiacomm/Bennys-Basic-Electricity-System/raw/refs/tags/v1.0.0/33333.apk" download>⬇ 下載</a>
       </div>
     </div>
   </main>
