--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>benny軟體下載站</title>
   <style>
-    /* 全局設定 */
     body {
       font-family: Arial, "Microsoft JhengHei", sans-serif;
       background-color: #f0f2f5;
@@ -73,10 +72,9 @@
       background-color: #218838;
     }
 
-    /* 響應式 */
     @media (min-width: 600px) {
       .software {
-        flex-direction: column; /* 移除 img 後改為直列即可 */
+        flex-direction: column;
       }
       .software div {
         flex: 1;
@@ -104,7 +102,7 @@
     <div class="software">
       <div>
         <h2>🔹 Android Benny象棋</h2>
-        <p>Android手機安裝， 象棋棋盤如沙場，對弈雙方需要在有限的空間內，透過深思熟慮的佈局和精密的計算，運用各種戰術來擊敗對手。這反映了古代軍事思想中「不戰而屈人之兵」或「知己知彼」的智慧</p>
+        <p>Android手機安裝， 象棋棋盤如沙場，對弈雙方需要在有限的空間內，透過深思熟慮的佈局和精密的計算，運用各種戰術來擊敗對手。</p>
         <a class="download" href="https://github.com/acasiacomm/mygame/releases/download/v1.0.0/app-release.apk" download>⬇ 下載</a>
       </div>
     </div>
@@ -112,7 +110,7 @@
     <div class="software">
       <div>
         <h2>🔹 Android Benny羽球輪替系統</h2>
-        <p>通用的羽球輪替系統只適用於Android手機安裝</p>
+        <p>通用的羽球輪替系統，只適用於 Android 手機安裝</p>
         <a class="download" href="https://github.com/acasiacomm/Bennys-badminton-racket-is-in-place/raw/refs/heads/main/22222.apk" download>⬇ 下載</a>
       </div>
     </div>
@@ -120,10 +118,20 @@
     <div class="software">
       <div>
         <h2>🔹 Benny基礎電力系統</h2>
-        <p>基礎電力指的是電力系統運作的四大基本物理量：電壓 (V) 、電流 (A) 、電阻 (Ω) 和功率 (W)，以及電力如何傳輸（如交流/直流）、儲存與使用，核心概念包括電路的閉合迴路、電量（庫侖 C）與能量（焦耳 J/度 kWh）單位。電力學則深入探討大電流、高功率電路在發電、輸電、配電及電能轉換等工程應用。 </p>
+        <p>介紹電壓、電流、電阻與功率等電力系統基本概念。</p>
         <a class="download" href="https://github.com/acasiacomm/Bennys-Basic-Electricity-System/raw/refs/tags/v1.0.0/33333.apk" download>⬇ 下載</a>
       </div>
     </div>
+
+    <!-- ✅ 第5個軟體（新增） -->
+    <div class="software">
+      <div>
+        <h2>🔹 Benny 行動電話工程模型</h2>
+        <p>要查詢手機 4G/5G 訊號值與基地台名稱，可透過三大電信（中華、台哥大、遠傳）的官方網站看涵蓋圖，或利用 Android 手機「工程模式」查看詳細訊號資訊（dBm 值），iPhone 則需透過特定 App 或撥打隱藏指令來獲取如 RSRP、SINR 等精確數值；WIFi 訊號則看手機內建功能即可</p>
+        <a class="download" https://github.com/acasiacomm/Mobilephone-engineering-model/raw/refs/heads/main/44444.apk" download>⬇ 下載</a>
+      </div>
+    </div>
+
   </main>
 
   <footer>
