--- a/index.html
+++ b/index.html
@@ -132,12 +132,21 @@
       </div>
     </div>
     
-<!-- ✅ 第5個軟體（新增） -->
+<!-- ✅ 第6個軟體（新增） -->
     <div class="software">
       <div>
         <h2>🔹 Benny時間相機</h2>
         <p>在照片/影片上加入時間、日期、地點、GPS座標、地圖、海拔等</p>
         <a class="download" href="https://github.com/acasiacomm/Benny-Time-Camera/raw/refs/heads/main/55555.apk" download>⬇ 下載</a>
+      </div>
+    </div>
+
+<!-- ✅ 第7個軟體（新增） -->
+    <div class="software">
+      <div>
+        <h2>🔹 Benny防火百葉窗計算</h2>
+        <p>消防百葉的尺寸與葉扇通風量計算，核心是根據《各類場所消防安全設備設置標準》與建築技術規則，計算防煙區劃的所需排煙量 (Q)，再結合百葉的有效開口面積 (A)、通風率 (Vlouver)及風速 (V)，確保 \(\text{Q}=\text{A}\times \text{Vlouver}\times \text{V}\) 符合規定，並考量葉片角度、間距、材質，決定百葉的實際尺寸與數量，以達到有效排煙並滿足法規要求的有效開口面積百分比。 </p>
+        <a class="download" href="https://github.com/acasiacomm/Benny-s-Fire-Louver-Calculation/raw/refs/heads/main/66666.apk" download>⬇ 下載</a>
       </div>
     </div>
     
