--- a/index.html
+++ b/index.html
@@ -149,6 +149,15 @@
         <a class="download" href="https://github.com/acasiacomm/Benny-s-Fire-Louver-Calculation/raw/refs/heads/main/66666.apk" download>⬇ 下載</a>
       </div>
     </div>
+
+    <!-- ✅ 第8個軟體（新增） -->
+    <div class="software">
+      <div>
+        <h2>🔹 Benny國際圍棋</h2>
+        <p>符合國際與日本圍棋的標準規則。其餘 所有功能，職業級 AI、計時賽制、認輸機制 </p>
+        <a class="download" href="https://github.com/acasiacomm/Benny-s-Go-game/raw/refs/heads/main/77777.apk" download>⬇ 下載</a>
+      </div>
+    </div>
     
   </main>
 
