--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@
   </header>
 
   <main>
+
+ <div class="software">
+      <div>
+        <h2>🔹 Android Benny彩卷預測系統</h2>
+        <p>Android手機安裝，使用過去彩券開獎結果的大數據進行A.I 人工智能分析預測結果。</p>
+        <a class="download" href="https://github.com/acasiacomm/Benny-Number-Prediction-System/raw/refs/heads/main/88888.apk" download>⬇ 下載</a>
+      </div>
+    </div>
+    
     <div class="software">
       <div>
         <h2>🔹 Android Benny象棋</h2>
