--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
   </main>
 
   <section class="about-me">
-    <h3>👨‍💻 關於開發者</h3>
+    <h3>關於Benny開發者</h3>
     <p>你好！我是 Benny。我熱衷於探索虛擬與現實的邊界，專注於 3D 渲染與遊戲引擎技術。</p>
     <div class="skills">
       <div class="skill-tag">Three.js</div>
