--- a/index.html
+++ b/index.html
@@ -153,10 +153,18 @@
 
   <main>
 
+ <div class="software">
+      <div class="software-content">
+        <h2>🔹 Android 古典暗棋</h2>
+        <p>打地鼠大賽是一款經典「打地鼠」玩法的休閒小遊戲，考驗玩家的反應速度、專注力與手眼協調能力。玩家需要在地鼠冒出來的瞬間迅速點擊（或敲擊）它們來得分，隨著難度提升，挑戰也會越來越刺激 2026/02/16 Benny版權</p>
+        <a class="download" href="https://github.com/acasiacomm/Benny-plays-whack-a-mole/raw/refs/heads/main/99999.apk" download>⬇ DOWNLOAD NOW</a>
+      </div>
+    </div>
+    
     <div class="software">
       <div class="software-content">
         <h2>🔹 Android 打地鼠大賽</h2>
-        <p>打地鼠大賽是一款經典「打地鼠」玩法的休閒小遊戲，考驗玩家的反應速度、專注力與手眼協調能力。玩家需要在地鼠冒出來的瞬間迅速點擊（或敲擊）它們來得分，隨著難度提升，挑戰也會越來越刺激 2026/02/16 Benny版權</p>
+        <p>中國風棋盤、戰績紀錄與 刪除功能、AI自動對弈 2026/02/17 Benny版權</p>
         <a class="download" href="https://github.com/acasiacomm/Benny-plays-whack-a-mole/raw/refs/heads/main/99999.apk" download>⬇ DOWNLOAD NOW</a>
       </div>
     </div>
