Remove multiple software entries and update about me
Removed several software sections and updated the about me paragraph.

--- a/index.html
+++ b/index.html
@@ -177,13 +177,7 @@
       </div>
     </div>
     
-    <div class="software">
-      <div class="software-content">
-        <h2>🔹 Android Benny象棋</h2>
-        <p>Android手機安裝， 象棋棋盤如沙場，對弈雙方需要在有限的空間內，透過深思熟慮的佈局和精密的計算。</p>
-        <a class="download" href="https://github.com/acasiacomm/mygame/releases/download/v1.0.0/app-release.apk" download>⬇ DOWNLOAD NOW</a>
-      </div>
-    </div>
+   
 
     <div class="software">
       <div class="software-content">
@@ -193,37 +187,9 @@
       </div>
     </div>
 
-    <div class="software">
-      <div class="software-content">
-        <h2>🔹 Benny基礎電力系統</h2>
-        <p>介紹電壓、電流、電阻與功率等電力系統基本概念。</p>
-        <a class="download" href="https://github.com/acasiacomm/Bennys-Basic-Electricity-System/raw/refs/tags/v1.0.0/33333.apk" download>⬇ DOWNLOAD NOW</a>
-      </div>
-    </div>
 
-    <div class="software">
-      <div class="software-content">
-        <h2>🔹 Benny 行動電話工程模型</h2>
-        <p>查詢手機 4G/5G 訊號值與基地台名稱，獲取如 RSRP、SINR 等精確數值。</p>
-        <a class="download" href="https://github.com/acasiacomm/Mobilephone-engineering-model/raw/refs/heads/main/44444.apk" download>⬇ DOWNLOAD NOW</a>
-      </div>
-    </div>
-    
-    <div class="software">
-      <div class="software-content">
-        <h2>🔹 Benny時間相機</h2>
-        <p>在照片/影片上加入時間、日期、地點、GPS座標、地圖、海拔等。</p>
-        <a class="download" href="https://github.com/acasiacomm/Benny-Time-Camera/raw/refs/heads/main/55555.apk" download>⬇ DOWNLOAD NOW</a>
-      </div>
-    </div>
 
-    <div class="software">
-      <div class="software-content">
-        <h2>🔹 Benny防火百葉窗計算</h2>
-        <p>消防百葉的尺寸與葉扇通風量計算，符合《各類場所消防安全設備設置標準》。</p>
-        <a class="download" href="https://github.com/acasiacomm/Benny-s-Fire-Louver-Calculation/raw/refs/heads/main/66666.apk" download>⬇ DOWNLOAD NOW</a>
-      </div>
-    </div>
+  
 
     <div class="software">
       <div class="software-content">
@@ -237,7 +203,7 @@
 
   <section class="about-me">
     <h3>關於Benny開發者</h3>
-    <p>你好！我是 Benny。我熱衷於探索虛擬與現實的邊界，專注於 3D 渲染與遊戲引擎技術。</p>
+    <p>你好！我是 Benny。熱衷於探索虛擬與現實的邊界，專注於 3D 渲染與遊戲引擎技術。</p>
     <div class="skills">
       <div class="skill-tag">Three.js</div>
       <div class="skill-tag">Unity</div>
