Update headings for Android software sections

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     
     <div class="software">
       <div class="software-content">
-        <h2>🔹 Android Benny彩卷預測系統</h2>
+        <h2>🔹 Android 彩卷預測系統</h2>
         <p>Android手機安裝，使用過去彩券開獎結果的大數據進行A.I 人工智能分析預測結果。</p>
         <a class="download" href="https://github.com/acasiacomm/Benny-Number-Prediction-System/raw/refs/heads/main/88888.apk" download>⬇ DOWNLOAD NOW</a>
       </div>
@@ -181,7 +181,7 @@
 
     <div class="software">
       <div class="software-content">
-        <h2>🔹 Android Benny羽球輪替系統</h2>
+        <h2>🔹 Android 羽球輪替系統</h2>
         <p>通用的羽球輪替系統，只適用於 Android 手機安裝</p>
         <a class="download" href="https://github.com/acasiacomm/Bennys-badminton-racket-is-in-place/raw/refs/heads/main/22222.apk" download>⬇ DOWNLOAD NOW</a>
       </div>
@@ -193,7 +193,7 @@
 
     <div class="software">
       <div class="software-content">
-        <h2>🔹 Benny國際圍棋</h2>
+        <h2>🔹 國際圍棋</h2>
         <p>符合國際與日本圍棋的標準規則。職業級 AI、計時賽制、認輸機制。</p>
         <a class="download" href="https://github.com/acasiacomm/Benny-s-Go-game/raw/refs/heads/main/77777.apk" download>⬇ DOWNLOAD NOW</a>
       </div>
