--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <div class="software">
       <div class="software-content">
         <h2>🔹 Android 羽球輪替系統</h2>
-        <p>通用的羽球輪替系統，只適用於 Android 手機安裝</p>
+        <p>羽球輪替系統（常見於社團、球館友誼場）是一種為了讓多人都能公平上場而設計的排隊與換人制度，特別適用於場地有限、打雙打為主的情況</p>
         <a class="download" href="https://github.com/acasiacomm/Bennys-badminton-racket-is-in-place/raw/refs/heads/main/22222.apk" download>⬇ DOWNLOAD NOW</a>
       </div>
     </div>
