--- a/index.html
+++ b/index.html
@@ -154,6 +154,14 @@
   <main>
 
  <div class="software">
+
+<div class="software-content">
+        <h2>🔹 Android 圍棋競賽</h2>
+        <p>圍棋比賽分成 職業賽 和 業餘賽 兩種，差別主要在「棋手身分」與「比賽規模」 2026/02/18 Benny版權</p>
+        <a class="download" href="https://github.com/acasiacomm/Benny-s-Go-game/raw/refs/heads/main/77777.apk" download>⬇ DOWNLOAD NOW</a>
+      </div>
+    </div>
+   
       <div class="software-content">
         <h2>🔹 Android 古典暗棋</h2>
         <p>中國風棋盤、戰績紀錄與 刪除功能、AI自動對弈 2026/02/17 Benny版權</p>
